--- a/AngularTest/Views/Shared/_Scripts.cshtml
+++ b/AngularTest/Views/Shared/_Scripts.cshtml
@@ -1,4 +1,5 @@
-﻿<script src="~/bower_components/jquery/dist/jquery.js"></script>
+﻿<!-- TODO: set up GULP to automatically inject the scripts from the scripts folder into this file. -->
+<script src="~/bower_components/jquery/dist/jquery.js"></script>
 <script src="~/bower_components/angular/angular.js"></script>
 <script src="~/bower_components/angular-animate/angular-animate.js"></script>
 <script src="~/bower_components/angular-aria/angular-aria.js"></script>
@@ -6,6 +7,7 @@
 <script src="~/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="~/bower_components/angular-material/angular-material.js"></script>
 <script src="~/scripts/ts/app.js"></script>
+<script src="~/scripts/ts/RouteConfig.js"></script>
 <script src="~/scripts/ts/Controllers/AngularTestController.js"></script>
 <script src="~/scripts/ts/Controllers/HomeController.js"></script>
 <script src="~/scripts/ts/Services/SynchronizationService.js"></script>
